2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/misc.c (libbalsa_create_grid_entry): set hexpand on
	the entry.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bars in identity dialogs

	* libbalsa/identity.c (libbalsa_identity_select_dialog),
	(delete_ident_cb), (libbalsa_identity_config_dialog): use header
	bars.
	(append_ident_notebook_page), (setup_ident_frame): remove
	redundant argument.

2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Set minimum vertical space for recipient list

	* src/sendmsg-window.c (create_email_entry): try to give the
	recipient list around two lines of space.

2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup--I missed one :(

	* src/balsa-mime-widget-text.c (fill_text_buf_cited):
	GtkTextTag:foreground-gdk is deprecated.

2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* src/balsa-mime-widget-text.c (quote_tag):
	GtkTextTag:foreground-gdk is deprecated.

2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* src/balsa-app.c (balsa_app_init):
	GtkSettings:gtk-fallback-icon-theme is deprecated.

2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a transient parent and a header bar in the no-subject dialog

	* src/sendmsg-window.c (subject_not_empty): use a transient parent
	and a header bar.

2015-03-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a transient parent for filter dialogs

	* libbalsa/filter.h: add parent window to filters_edit_dialog
	and filters_export_dialog API.
	* src/filter-edit-dialog.c (filters_edit_dialog): use it, and
	add a header bar.
	* src/filter-export-dialog.c (filters_export_dialog): ditto.
	* src/main-window.c (filters_activated),
	(export_filters_activated): pass the main window as the
	transient parent.

2015-03-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a transient parent for the BalsaFilterRunDialog, and manage